Add requirements, update README and example
and minor cleanup

--- a/sample.cfg
+++ b/sample.cfg
@@ -9,3 +9,4 @@ stdin = DSID=%DSID%
 action = openconnect --juniper %HOST% --cookie-on-stdin --script-tun
 	--script "tunproxy -D 8080"
 
+verbose = True
